--- a/wp.html
+++ b/wp.html
@@ -4,7 +4,6 @@
 </head>
 <body>
 <h1>Web page</h1>
-<p> web page is a document for the world wide web.The information on a web page is displayed online with help of web browser.
-</p>
+<p> web page is a document for the world wide web.The information on a web page is displayed online with help of web browser</p>
 </body>
 </html>
